--- a/index.html
+++ b/index.html
@@ -1,49 +1,130 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>C6 Bank</title>
+  </head>
+  <body>
+    <header>
+      <img src="./assets/logo.png" alt="logo" />
+      <nav>
+        <a class="link" href="#">Para você</a>
+        <a class="link" href="#">Para seu negócio</a>
+        <a class="link-btn" href="#">ABRA SUA CONTA</a>
+      </nav>
+    </header>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;900&display=swap" rel="stylesheet">
+    <main>
+      <section class="first-section">
+        <p class="info-points">
+          <span>Novo</span>
+          Conheça nosso Programa de Pontos Átomos
+        </p>
 
-    <title>Starbucks</title>
-</head>
+        <h1>Um banco transparente, completo e com a sua cara</h1>
+        <p class="info-account">
+          Conta digital e cartão de crédito gratuitos. Saques e transferências
+          sem tarifa.
+        </p>
 
-<body>
-    <div class="circulo"></div>
+        <a href="#" class="btn-secondary">NOSSOS PRODUTOS</a>
+      </section>
 
-    <img src="./assets/logo.png" class="logo">
+      <section class="second-section">
+        <div>
+          <h2>Sem tarifas:</h2>
+          <h3>economize seu dinheiro</h3>
 
-    <div class="conteudo">
+          <div class="container">
+            <div class="container-cards">
+              <div class="card">
+                <img src="./assets/icon-cards.png" alt="icon-card" />
+                <p class="info">Saques nos caixas da rede Banco24Horas</p>
+                <p class="description">
+                  São mais de 23 mil caixas em 680 municípios do Brasil. Saques
+                  ilimitados sem cobrança de tarifa.
+                </p>
+              </div>
 
-        <div class="caixa-texto">
-            <h2>It's not just Coffee <br>
-                It's <span>Starbucks</span></h2>
-            <p>O CAFÉ CONTÉM 98% DE ÁGUA, POR ISSO É MELHOR PREPARÁ-LO COM ÁGUA FRESCA FILTRADA PARA UM CAFÉ COM UM SABOR PERFEITO.
+              <div class="card">
+                <img src="./assets/reload.png" alt="icon-reload" />
+                <p class="info">Transferências e TEDs ilimitadas</p>
+                <p class="description">
+                  Movimente seu dinheiro para qualquer conta em qualquer banco
+                  sem pagar nada por isso.
+                </p>
+              </div>
+            </div>
+
+            <div class="container-cards">
+              <div class="card">
+                <img src="./assets/cifrao.png" alt="icon-money" />
+                <p class="info">Depósito por boleto</p>
+                <p class="description">
+                  Emita boletos grátis e traga dinheiro para a sua conta C6 sem
+                  pagar tarifas.
+                </p>
+              </div>
+
+              <div class="card">
+                <img src="./assets/clock.png" alt="icon-timer" />
+                <p class="info">Atendimento 24h</p>
+                <p class="description">
+                  Conte com a gente 24h por dia, 7 dias por semana pelo chat do
+                  app.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <img src="./assets/cards.png" alt="cards group" class="cards-group" />
+      </section>
+
+      <section class="third-section">
+        <div class="container-info">
+          <div>
+            <h2>Um banco completo</h2>
+            <h3>com produtos exclusivos</h3>
+          </div>
+
+          <div class="container-links">
+            <a class="second-link" href="#">PARA VOCÊ</a>
+            <a class="second-link" href="#">PARA SUA EMPRESA</a>
+          </div>
+        </div>
+
+        <div class="content-card-info">
+          <div class="card-info">
+            <p class="info">Conta com cartão C6 Business</p>
+            <p class="description">
+              A conta MEI é completa e não tem tarifa de manutenção. Além disso,
+              você pode ter um cartão de crédito sem anuidade.
             </p>
-            <button>Deixe o seu Like!</button>
+
+            <div class="container-information">
+              <img
+                src="./assets/som.png" alt="icon-approximaton"/>
+              <p>Aproxime e pague</p>
+            </div>
+          </div>
+
+          <div class="container-images">
+            <img src="./assets/card.png" alt="card" class="img-card" />
+            <img src="./assets/phone.png" alt="phone" class="img-phone" />
+            <img src="./assets/logo-4.png" alt="logo-business" />
+          </div>
         </div>
-
-        <div class="caixa-imagem">
-            <img src="./assets/img1.png" class="starbucks">
-        </div>
-
-    </div>
-
-    <div class="menu">
-        <img src="./assets/thumb1.png" class="botao-menu"
-            onclick="trocaImagem('./assets/img1.png'); trocaCor('#017143')">
-        <img src="./assets/thumb2.png" class="botao-menu"
-            onclick="trocaImagem('./assets/img2.png'); trocaCor('#eb7495')">
-        <img src="./assets/thumb3.png" class="botao-menu"
-            onclick="trocaImagem('./assets/img3.png'); trocaCor('#d752b1')">
-    </div>
-
-</body>
-<script src="./scripts.js"></script>
-
+      </section>
+    </main>
+  </body>
 </html>
